--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -58,6 +58,7 @@ jobs:
   
   build-and-push-to-dh:
       name: Build and push to DockerHub
+      needs: [test]
       runs-on: ubuntu-latest
       steps:
         - uses: actions/checkout@v3
@@ -77,6 +78,7 @@ jobs:
             docker push ${{ secrets.DOCKER_USERNAME }}/clothing_store-item:latest
   build-and-push-to-yc:
     name: Build and push to YaCloud Registry
+    needs: [test]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
