--- a/requirements.txt
+++ b/requirements.txt
@@ -44,3 +44,7 @@ uvicorn==0.24.0.post1
 watchfiles==0.21.0
 websockets==12.0
 yarl==1.9.3
+sqlalchemy_utils==0.41.1
+prometheus_client==0.11.0
+httpx==0.25.2
+itsdangerous==2.1.2
