--- a/cart/requirements.txt
+++ b/cart/requirements.txt
@@ -33,6 +33,10 @@ python-dotenv==1.0.0
 python-multipart==0.0.6
 PyYAML==6.0.1
 requests==2.31.0
+sqlalchemy_utils==0.41.1
+prometheus_client==0.11.0
+httpx==0.25.2
+itsdangerous==2.1.2
 sniffio==1.3.0
 SQLAlchemy==2.0.23
 SQLAlchemy-Utils==0.41.1
